--- a/Text Classification.ipynb
+++ b/Text Classification.ipynb
@@ -50,8 +50,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "12f4ae78-05ad-4914-9cae-d4f6bf2c0e47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gensim\n",
+    "from gensim.models import Word2Vec,KeyedVectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1c0c8c43-99b9-4e38-a38a-a8c566b3ac41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[==========================================--------] 84.3% 1402.4/1662.8MB downloaded"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub message rate exceeded.\n",
+      "The Jupyter server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--ServerApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "ServerApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "ServerApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gensim.downloader as api\n",
+    "wv=api.load('word2vec-google-news-300')\n",
+    "vec_king=wv['king']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8378a96-88a5-4667-8774-3cb8d33071fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "messages-pd.read_csv('spamhamdata.csv',sep='\\t',names=[\"label\",\"messages\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbcf8f64-1e44-4247-97d4-308bcb797a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02c704d3-333f-4c3f-9346-222789bcf7d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer-WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31aab6cb-2cea-472b-843a-fef9d623455f",
    "metadata": {},
    "outputs": [],
    "source": []
